Server deploy: settings/env, docker-compose ports, nginx http; SMS verify fix; Flutter BASE_URL prod

--- a/env.example
+++ b/env.example
@@ -1,15 +1,15 @@
 # Database Configuration
 DB_ENGINE=django.db.backends.postgresql
-DB_NAME=your_database_name
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
-DB_HOST=localhost
+DB_NAME=dofamine
+DB_USER=dofamine_user
+DB_PASSWORD=MySuperStrongPassword123!
+DB_HOST=db
 DB_PORT=5432
 
 # Django Settings
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=by@^^kevqba8ay%vtmr@nl$zw7bpw6ixlni3!l%h&^lj+pmakf
 DEBUG=False
-ALLOWED_HOSTS=your-domain.com,localhost,127.0.0.1
+ALLOWED_HOSTS=*
 
 # Email Configuration (optional)
 EMAIL_HOST=smtp.gmail.com
