--- a/nginx.conf
+++ b/nginx.conf
@@ -35,26 +35,10 @@ http {
         server web:8000;
     }
 
-    # HTTP сервер (редирект на HTTPS)
+    # HTTP сервер (без HTTPS, безопасно для первого деплоя)
     server {
         listen 80;
         server_name _;
-        
-        # Редирект на HTTPS
-        return 301 https://$host$request_uri;
-    }
-
-    # HTTPS сервер
-    server {
-        listen 443 ssl http2;
-        server_name your-domain.com;
-
-        # SSL конфигурация
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-        ssl_prefer_server_ciphers off;
 
         # Статические файлы
         location /static/ {
