--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5433:5432"  # host:container — избегаем конфликта с системным postgres
     restart: unless-stopped
 
   # Redis для кеширования (опционально)
@@ -39,7 +39,7 @@ services:
       - DB_HOST=db
       - DB_PORT=5432
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS:-localhost,127.0.0.1}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS:-*}
     depends_on:
       - db
       - redis
@@ -49,13 +49,11 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:80"   # избегаем конфликта с системным nginx/Apache на 80
     volumes:
       - ./staticfiles:/var/www/static
       - ./media:/var/www/media
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl:/etc/nginx/ssl
     depends_on:
       - web
     restart: unless-stopped
