Update: Remove Firebase, add Twilio, prepare for production deployment (secrets removed)

--- a/env.example
+++ b/env.example
@@ -27,3 +27,11 @@ STATIC_ROOT=/var/www/static/
 
 # Logging
 LOG_LEVEL=INFO
+
+# Twilio Verify Configuration
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_VERIFY_SERVICE_SID=your_verify_service_sid
+
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key
