Add SMS verification bypass for testing

--- a/env.example
+++ b/env.example
@@ -28,10 +28,8 @@ STATIC_ROOT=/var/www/static/
 # Logging
 LOG_LEVEL=INFO
 
-# Twilio Verify Configuration
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_VERIFY_SERVICE_SID=your_verify_service_sid
+# P1SMS Configuration
+P1SMS_API_KEY=your_p1sms_api_key
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
