--- a/nginx.conf
+++ b/nginx.conf
@@ -52,6 +52,7 @@ http {
             alias /var/www/media/;
             expires 1y;
             add_header Cache-Control "public";
+            try_files $uri $uri/ =404;
         }
 
         # API запросы к Django
