--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,14 @@ http {
             try_files $uri $uri/ =404;
         }
 
+        # Аватарки (новый путь)
+        location /avatars/ {
+            alias /var/www/media/avatars/;
+            expires 1y;
+            add_header Cache-Control "public";
+            try_files $uri $uri/ =404;
+        }
+
         # API запросы к Django
         location / {
             proxy_pass http://django;
