--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,10 @@ http {
             expires 1y;
             add_header Cache-Control "public";
             try_files $uri $uri/ =404;
+            
+            # Логирование для отладки
+            access_log /var/log/nginx/media_access.log;
+            error_log /var/log/nginx/media_error.log;
         }
 
         # API запросы к Django
