Fix media file routing by removing Django port exposure
- Remove port 8000 exposure from Django container in docker-compose.yml
- All requests must now go through nginx (port 8080)
- Add test script for routing verification
- This should fix the issue where Django was serving media files directly
- Now nginx will properly handle all media file requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,9 @@ services:
     volumes:
       - ./media:/app/media
       - ./staticfiles:/app/staticfiles
-    ports:
-      - "8000:8000"
+    # Убираем экспозицию порта - все запросы должны идти через nginx
+    # ports:
+    #   - "8000:8000"
     environment:
       - DEBUG=False
       - DB_ENGINE=django.db.backends.postgresql
